Agregar menu navegacion y footer, encerrar yield en main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+      <%= link_to 'Inicio', root_path %>
+      <%= link_to 'Libros', libros_path %>
+    </nav>
+    
+    <div><%= flash[:notice] %></div>
+    <div><%= flash[:alert] %></div>
+
+    <main>
+      <%= yield %>
+    </main>
+
+    <footer>
+      <p>Proyecto CRUD Ruby on Rails 2026</p>
+    </footer>
   </body>
 </html>
