Crear vista parcial _cart y renderizarla

--- a/app/views/libros/index.html.erb
+++ b/app/views/libros/index.html.erb
@@ -4,10 +4,6 @@
 
 <div>
   <% @libros.each do |libro| %>
-    <div><%= link_to libro.nombre, libro_path(libro.id) %></div>
-    <p><%= libro.fecha_publicacion %></p>
-    <h2><%= libro.autor %></h2>
-    <div><%= libro.descripcion %></div>
-    <p><%= libro.cantidad %> Unidades</p>
+    <%= render "cart", libro: libro %>
   <% end %>
 </div>
