--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,10 +1,232 @@
-/*
- * This is a manifest file that'll be compiled into application.css.
- *
- * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
- * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
- * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
- * depending on specificity.
- *
- * Consider organizing styles into separate files for maintainability.
- */
+html {
+    font-size: 62.5%;
+}
+
+:root {
+    --color-primario: #3b4862;
+    --color-secundario: #6277a1;
+    --color-terciario: #f0f0f0;
+}
+
+h1 {
+    font-size: 3rem;
+    margin: 0 0 3rem 0;
+}
+h2 {
+    font-size: 2.5rem;
+}
+h3 {
+    font-size: 1.8rem;
+}
+
+body {
+    font-size: 1.6rem;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background-color: var(--color-terciario);
+}
+img {
+    width: 100%;
+    display: block;
+}
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.contenedor {
+    max-width: 120rem;
+    width: 95%;
+    margin: 0 auto;
+    padding: 2rem 0;
+}
+.cabecera__navegacion{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5rem 3rem;
+    background-color: var(--color-secundario);
+    margin: 0;
+}
+@media (min-width: 768px) {
+    .cabecera__navegacion{
+        flex-direction: row;
+    }
+}
+.cabecera__navegacion-inicio,
+.cabecera__navegacion-libros {
+    font-weight: 700;
+    color: white;
+    padding: .5rem 2rem;
+    border-radius: 5px;
+}
+.cabecera__navegacion-inicio:hover{
+    background-color: white;
+    color: var(--color-secundario);
+}
+.cabecera__navegacion-libros:hover{
+    background-color: white;
+    color: var(--color-secundario);
+}
+
+.piez {
+   background-color: var(--color-secundario); 
+}
+.piez__texto {
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    margin: 0;
+    padding: 3rem;
+}
+.libros__titulo, .libro-edit__titulo, .libro-new__titulo{
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--color-primario);
+    margin: 0 0 2rem 0;
+}
+.libros__agregar{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+.libros__agregar a{
+    padding: 1rem 3rem;
+    background-color: var(--color-secundario);
+    border-radius: 1px;
+}
+.libros__agregar a:hover{
+    background-color: var(--color-primario);
+}
+.libros__carts {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+@media (min-width: 768px) {
+    .libros__carts {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .libros__carts {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+}
+@media (min-width: 1400px) {
+    .libros__carts {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2rem;
+    }
+}
+
+.libro {
+    background-color: white;
+}
+.libro__info{
+    padding: 2rem;
+}
+.libro__info > *:not(:last-child) {
+    margin: 0 0 1rem 0;
+}
+
+.libro__imagen img{
+    aspect-ratio: 3 / 4;
+    object-fit: cover;
+    object-position: center;
+}
+
+.libro__enlace{
+    display: block;
+    text-align: center;
+    background-color: var(--color-secundario);
+    padding: 1rem 0;
+}
+.libro__enlace:hover{
+    background-color: var(--color-primario);
+    cursor: pointer;
+}
+.libro__fecha{
+    font-weight: 700;
+    color: var(--color-secundario);
+}
+.libro__descripcion{
+    text-align: justify;
+}
+.libro__cantidad{
+    font-weight: 700;
+}
+.libro-show{
+    max-width: 40rem;
+    width: 95%;
+    margin: 0 auto;
+    padding: 0 0 2rem 0;
+}
+.libro-show__enlaces{
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
+    background-color: white;
+    padding: 0 2rem 2rem 2rem;
+}
+
+.libro-show__enlaces > * {
+    background-color: var(--color-secundario);
+    color: white;
+    padding: .5rem 1rem;
+}
+.btn:hover{
+    background-color: var(--color-primario);
+    cursor: pointer;
+}
+.libro-show__eliminar{
+    appearance: none;
+    border: none;
+    background-color: var(--color-secundario);
+    color: white;
+}
+
+.libro-edit, .libro-new {
+    max-width: 40rem;
+    width: 95%;
+    margin: 0 auto;
+}
+
+.formulario-libro{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.formulario-libro__nombre,
+.formulario-libro__descripcion,
+.formulario-libro__autor,
+.formulario-libro__cantidad,
+.formulario-libro__fecha,
+.formulario-libro__portada {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+.formulario-libro__submit {
+    display: flex;
+    justify-content: flex-end;
+}
+.libro-edit__cancelar,
+.libro-new__cancelar {
+    background-color: var(--color-secundario);
+    color: white;
+    padding: .5rem 2rem;
+}
+[class$="__contenedor-cancelar"] {
+    display: flex;
+    justify-content: end;
+}
