--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,10 @@
       </nav>
     </header>
     
-    <div><%= flash[:notice] %></div>
-    <div><%= flash[:alert] %></div>
+    <div class="flash">
+      <div class="flash__notice"><%= flash[:notice] %></div>
+      <div class="flash__alert"><%= flash[:alert] %></div>
+    </div>
 
     <main class="contenedor">
       <%= yield %>
