solucion: arreglo error cuando show quiere mostrar una imagen que todavía no se ha guardado

--- a/app/views/libros/_cart.html.erb
+++ b/app/views/libros/_cart.html.erb
@@ -1,7 +1,9 @@
 
 <div class="libro">
   <div class="libro__imagen">
-    <%= image_tag libro.portada if libro.portada.attached? %>
+    <% if libro.persisted? && libro.portada.attached? %>
+      <%= image_tag libro.portada %>
+    <% end %>
   </div>
   <div class="libro__info">
     <h1 class="libro__nombre"><%= libro.nombre %></h1>
