Modificar cart dos columnas no ver mas en show mensajes de errores con flash

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -115,14 +115,14 @@ a {
 @media (min-width: 1024px) {
     .libros__carts {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
     }
 }
 @media (min-width: 1400px) {
     .libros__carts {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
     }
 }
@@ -130,6 +130,12 @@ a {
 .libro {
     background-color: white;
     border-radius: 10px;
+}
+@media (min-width: 768px) {
+    .libro {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
 }
 .libro__info{
     padding: 2rem;
@@ -174,17 +180,16 @@ a {
     font-weight: 700;
 }
 .libro-show{
-    max-width: 40rem;
+    max-width: 60rem;
     width: 95%;
     margin: 0 auto;
     padding: 0 0 2rem 0;
 }
 .libro-show__enlaces{
     display: flex;
-    justify-content: flex-end;
-    gap: 2rem;
+    justify-content: space-evenly;
     background-color: white;
-    padding: 0 2rem 2rem 2rem;
+    padding: 2rem 0;
 }
 
 .libro-show__enlaces > * {
