--- a/app/views/libros/show.html.erb
+++ b/app/views/libros/show.html.erb
@@ -1,7 +1,7 @@
 <section class="libro-show">
   <div class="libro-show__cart">
     
-    <%= render "cart", libro: @libro %>
+    <%= render "cart", libro: @libro, show_link: false %>
   </div>
 
   <div class="libro-show__enlaces">
