--- a/app/views/libros/_cart.html.erb
+++ b/app/views/libros/_cart.html.erb
@@ -11,6 +11,8 @@
     <h2 class="libro__autor"><%= libro.autor %></h2>
     <div class="libro__descripcion"><%= libro.descripcion %></div>
     <p class="libro__cantidad"><%= libro.cantidad %> Unidades</p>
-    <div><%= link_to 'Ver mas', libro_path(libro.id), class:"libro__enlace" %></div>
+    <% if show_link %>
+      <div><%= link_to 'Ver mas', libro_path(libro.id), class:"libro__enlace" %></div>
+    <% end %>
   </div>
 </div>
